--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
+    "build":"vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
